...
      const val LOADING_INDICATOR = "Search Bar Loading Indicator"
      const val CLOSE_SEARCH = "Search Bar Close Button"
    }

    object TopAppBar {
      const val NAVIGATE_UP = "Top App Bar Navigate Up Button"
      const val TOP_APP_BAR = "Top App Bar"
      const val TOP_APP_BAR_TITLE = "Top App Bar Title"
    }

    object ExpandableFab {
      const val BACKGROUND = "Floating Button Background"
      const val BUTTON = "Expandable Floating Action Button"
    }
...
    const val NAVIGATION_BAR = "App Navigation Bar"

    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

...

  object Tabs {
    const val TAB_ITEM = "Tab Item %s"
  }

  object Person {
    const val PERSONAL_DETAILS = "Person Personal Details"
    const val CONTENT_LIST = "Person Details Lazy List"
    const val DEPARTMENT_STICKY_HEADER = "Person Department Sticky - %s"

    const val PERSON_NAME = "Person Name on Collapsible Content"
    const val COLLAPSIBLE_CONTENT = "Person Collapsible Content"

    const val SHIMMERING_BIOGRAPHY_CONTENT = "Shimmering Biography Content"

    const val CREDITS_FILTER_BOTTOM_SHEET = "Person Credits Filter Bottom Sheet"

    const val KNOWN_FOR_SECTION = "Person Known For Section"
    const val KNOWN_FOR_SECTION_LIST = "Person Known For Section Lazy List"

    const val CREDIT_MEDIA_ITEM = "Person Credit Media Item - %s"

    const val EMPTY_CONTENT_CREDIT_CARD = "Person Empty Content Credit Card - %s"

    const val ABOUT_FORM = "Person About Form"
    const val MOVIES_FORM = "Person Movies Form style grid = %s"
    const val TV_SHOWS_FORM = "Person TV Shows Form style grid = %s"
  }

  object Dialogs {
    const val TWO_BUTTON_DIALOG = "Two Button Dialog"
...
      const val SCAFFOLD = "Jellyseerr Requests Scaffold"
    }
  }

  object Menu {
    fun item(value: String) = "Menu Item $value"
    const val MENU_BUTTON_VERTICAL = "Menu Button Vertical"
    const val DROPDOWN_MENU = "Dropdown Menu"
    const val SPOILERS_OBFUSCATION = "Spoilers Obfuscation Button"
  }

  object Watchlist {
    const val TAB_BAR = "Watchlist Tab Bar %s"
    const val WATCHLIST_SCREEN = "Watchlist Screen"
...
