...
      )
      val movieDetails = Movie(
        id = 1123,
        posterPath = "/fCayJrkfRaCRCTh8GqN30f8oyQF.jpg",
        releaseDate = "2022",
        title = "Flight Club",
        rating = "9.5",
        isFavorite = false,
        overview = "A ticking-time-bomb insomniac and a slippery soap salesman channel primal" +
          " male aggression into a shocking new form of therapy. Their concept catches on," +
          " with underground fight clubs forming in every town, until an eccentric gets in the" +
          " way and ignites an out-of-control spiral toward oblivion.",
        director = Director(
...
