package com.divinelink.feature.details.person.ui

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.longClick
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToIndex
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performTouchInput
import androidx.compose.ui.test.swipeDown
import com.divinelink.core.data.person.details.model.PersonDetailsResult
import com.divinelink.core.domain.components.SwitchViewButtonViewModel
import com.divinelink.core.domain.credits.SpoilersObfuscationUseCase
import com.divinelink.core.fixtures.data.preferences.TestPreferencesRepository
import com.divinelink.core.fixtures.details.person.PersonDetailsFactory
import com.divinelink.core.fixtures.model.media.MediaItemFactory
import com.divinelink.core.fixtures.model.person.credit.GroupedPersonCreditsSample
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory.bruceAlmighty
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory.despicableMe
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory.littleMissSunshine
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory.theOffice
import com.divinelink.core.fixtures.model.person.credit.PersonCastCreditFactory.toWizard
import com.divinelink.core.fixtures.model.person.credit.PersonCrewCreditFactory
import com.divinelink.core.model.ScreenType
import com.divinelink.core.model.media.MediaType
import com.divinelink.core.model.media.encodeToString
import com.divinelink.core.model.person.Gender
import com.divinelink.core.model.person.KnownForDepartment
import com.divinelink.core.model.tab.PersonTab
import com.divinelink.core.model.ui.SwitchPreferencesAction
import com.divinelink.core.model.ui.ViewableSection
import com.divinelink.core.navigation.route.Navigation
import com.divinelink.core.navigation.route.Navigation.DetailsRoute
import com.divinelink.core.navigation.route.Navigation.PersonRoute
import com.divinelink.core.testing.ComposeTest
import com.divinelink.core.testing.MainDispatcherRule
import com.divinelink.core.testing.setVisibilityScopeContent
import com.divinelink.core.testing.storage.FakePreferenceStorage
import com.divinelink.core.testing.uiTest
import com.divinelink.core.testing.usecase.TestFetchChangesUseCase
import com.divinelink.core.testing.usecase.TestFetchPersonDetailsUseCase
import com.divinelink.core.testing.usecase.TestMarkAsFavoriteUseCase
import com.divinelink.core.ui.TestTags
import com.divinelink.core.ui.UiString
import com.divinelink.core.ui.components.MOVIE_CARD_ITEM_TAG
import com.divinelink.core.ui.menu.DropdownMenuViewModel
import com.divinelink.core.ui.resources.core_ui_filter_button_content_desc
import com.divinelink.core.ui.resources.core_ui_movie_image_placeholder
import com.google.common.truth.Truth.assertThat
import io.kotest.matchers.shouldBe
import kotlinx.coroutines.channels.Channel
import org.jetbrains.compose.resources.getString
import org.junit.Rule
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.test.mock.declare
import kotlin.test.AfterTest
import kotlin.test.BeforeTest
import kotlin.test.Test

class PersonScreenTest : ComposeTest() {

  private lateinit var fetchPersonDetailsUseCase: TestFetchPersonDetailsUseCase
  private lateinit var fetchChangesUseCase: TestFetchChangesUseCase
  private lateinit var markAsFavoriteUseCase: TestMarkAsFavoriteUseCase
  private lateinit var navArgs: PersonRoute

  private val preferencesRepository = TestPreferencesRepository()
  private val switchViewButtonViewModel = SwitchViewButtonViewModel(
    repository = preferencesRepository,
  )

  @get:Rule
  val mainDispatcherRule = MainDispatcherRule()

  @BeforeTest
  override fun setUp() {
    startKoin {
      // Do nothing
    }

    declare {
      DropdownMenuViewModel(
        entryPoint = ScreenType.Person(
          id = PersonDetailsFactory.steveCarell().person.id,
          name = PersonDetailsFactory.steveCarell().person.name,
        ),
        spoilersObfuscationUseCase = SpoilersObfuscationUseCase(
          preferenceStorage = FakePreferenceStorage(spoilersObfuscation = true),
          dispatcherProvider = mainDispatcherRule.testDispatcher,
        ),
      )
    }

    navArgs = PersonRoute(
      id = PersonDetailsFactory.steveCarell().person.id,
      knownForDepartment = null,
      name = PersonDetailsFactory.steveCarell().person.name,
      profilePath = null,
      gender = Gender.NOT_SET.value,
      saved = false,
    )
    fetchPersonDetailsUseCase = TestFetchPersonDetailsUseCase()
    fetchChangesUseCase = TestFetchChangesUseCase()
    markAsFavoriteUseCase = TestMarkAsFavoriteUseCase()
  }

  @AfterTest
  fun tearDown() {
    stopKoin()
  }

  @Test
  fun `test loading content is visible when navArgs name is null`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = PersonRoute(
        id = navArgs.id,
        knownForDepartment = navArgs.knownForDepartment,
        name = null,
        profilePath = navArgs.profilePath,
        gender = navArgs.gender,
        saved = false,
      ),
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()
  }

  @Test
  fun `test topAppBar is not visible when personDetails is not success`() = uiTest {
    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = PersonRoute(
        id = navArgs.id,
        knownForDepartment = navArgs.knownForDepartment,
        name = null,
        profilePath = navArgs.profilePath,
        gender = navArgs.gender,
        saved = false,
      ),
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.Components.TopAppBar.TOP_APP_BAR).assertIsNotDisplayed()
    onNodeWithTag(TestTags.Components.TopAppBar.TOP_APP_BAR_TITLE).assertIsNotDisplayed()
  }

  @Test
  fun `test DropDownMenu is visible when success`() = uiTest {
    fetchPersonDetailsUseCase.mockSuccess(
      PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell()),
    )
    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.Menu.MENU_BUTTON_VERTICAL).assertIsDisplayed().performClick()
    onNodeWithTag(TestTags.Menu.DROPDOWN_MENU).assertIsDisplayed()
    onNodeWithTag(TestTags.Menu.item("Share")).assertIsDisplayed().performClick()
    onNodeWithTag(TestTags.Menu.DROPDOWN_MENU).assertIsNotDisplayed()
  }

  @Test
  fun `test person content is visible when success personal details`() = uiTest {
    fetchPersonDetailsUseCase.mockSuccess(
      PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell()),
    )
    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.Person.CONTENT_LIST).assertIsDisplayed()
    onNodeWithTag(TestTags.Person.PERSONAL_DETAILS).assertIsDisplayed()
  }

  @Test
  fun `test state is updated on success person details`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()
    onNodeWithTag(TestTags.Person.CONTENT_LIST).assertIsDisplayed()
    onNodeWithTag(TestTags.Person.PERSONAL_DETAILS).assertIsDisplayed()
  }

  @Test
  fun `test knownFor section is visible when credits are available`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )
    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = PersonCastCreditFactory.knownFor(),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithTag(TestTags.Person.ABOUT_FORM).performScrollToIndex(1)

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertIsDisplayed()
    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION_LIST).assertIsDisplayed()
  }

  @Test
  fun `test knownFor section scroll position does not change when new items are added`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )
    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = PersonCastCreditFactory.knownFor(),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithTag(TestTags.Person.ABOUT_FORM).performScrollToNode(
      matcher = hasTestTag(TestTags.Person.KNOWN_FOR_SECTION),
    )

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertIsDisplayed()
    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION_LIST).assertIsDisplayed()

    onNodeWithText("8.6").assertIsDisplayed()
    onNodeWithText("9.6").assertIsNotDisplayed()
    onNodeWithText("9.5").assertIsNotDisplayed()
    onNodeWithText("9.4").assertIsNotDisplayed()

    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = listOf(
            theOffice().copy(
              media = MediaItemFactory.theOffice().copy(id = 1, voteAverage = 9.3),
            ),
            littleMissSunshine().copy(
              media = MediaItemFactory.littleMissSunshine().copy(id = 2, voteAverage = 9.4),
            ),
            despicableMe().copy(
              media = MediaItemFactory.despicableMe().copy(id = 3, voteAverage = 9.5),
            ),
            bruceAlmighty().copy(
              media = MediaItemFactory.bruceAlmighty().copy(id = 3, voteAverage = 9.6),
            ),
            theOffice().copy(
              media = MediaItemFactory.theOffice().copy(id = 5, voteAverage = 5.2),
            ),
            littleMissSunshine().copy(
              media = MediaItemFactory.littleMissSunshine().copy(id = 6, voteAverage = 4.3),
            ),
            despicableMe().copy(
              media = MediaItemFactory.despicableMe().copy(id = 7, voteAverage = 3.2),
            ),
            bruceAlmighty().copy(
              media = MediaItemFactory.bruceAlmighty().copy(id = 8, voteAverage = 2.1),
            ),
            theOffice(),
            littleMissSunshine(),
            despicableMe(),
            bruceAlmighty(),
          ),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithText("8.6").assertIsDisplayed()
    onNodeWithText("9.6").assertIsNotDisplayed()
    onNodeWithText("9.5").assertIsNotDisplayed()
    onNodeWithText("9.4").assertIsNotDisplayed()
  }

  @Test
  fun `test loading content is visible when ui state is success but person details are loading`() =
    uiTest {
      val channel = Channel<Result<PersonDetailsResult>>()

      fetchPersonDetailsUseCase.mockSuccess(
        response = channel,
      )

      val viewModel = PersonViewModel(
        fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
        fetchChangesUseCase = fetchChangesUseCase.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        route = PersonRoute(
          id = navArgs.id,
          knownForDepartment = null,
          name = null,
          profilePath = null,
          gender = Gender.NOT_SET.value,
          saved = true,
        ),
      )

      setVisibilityScopeContent {
        PersonScreen(
          route = navArgs,
          onNavigate = {},
          viewModel = viewModel,
          switchViewButtonViewModel = switchViewButtonViewModel,
          animatedVisibilityScope = this,
        )
      }
      onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()

      channel.send(
        Result.success(
          PersonDetailsResult.CreditsSuccess(
            knownForCredits = PersonCastCreditFactory.knownFor(),
            knownForDepartment = KnownForDepartment.Acting.value,
            movies = GroupedPersonCreditsSample.movies(),
            tvShows = GroupedPersonCreditsSample.tvShows(),
          ),
        ),
      )

      onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()
    }

  @Test
  fun `test loading content is gone when details are fetched with initial loading`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(response = channel)

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = PersonRoute(
        id = navArgs.id,
        knownForDepartment = null,
        name = null,
        profilePath = null,
        gender = Gender.NOT_SET.value,
        saved = false,
      ),
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()

    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = PersonCastCreditFactory.knownFor(),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()

    channel.send(
      Result.success(
        PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell()),
      ),
    )

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()
  }

  @Test
  fun `test onMediaClick navigates to detail`() = uiTest {
    var detailsRoute: DetailsRoute? = null
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {
          if (it is DetailsRoute) {
            detailsRoute = it
          }
        },
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )
    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = PersonCastCreditFactory.knownFor(),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithContentDescription(
      getString(UiString.core_ui_movie_image_placeholder),
    ).assertIsDisplayed()

    onNodeWithTag(TestTags.Person.ABOUT_FORM).performScrollToNode(
      matcher = hasTestTag(TestTags.Person.KNOWN_FOR_SECTION),
    )

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertIsDisplayed()

    onAllNodesWithTag(MOVIE_CARD_ITEM_TAG)[0]
      .performClick()

    assertThat(detailsRoute).isEqualTo(
      DetailsRoute(
        id = 2316,
        isFavorite = null,
        mediaType = MediaType.TV.value,
      ),
    )
  }

  @Test
  fun `test onMediaLongClick opens action modal`() = uiTest {
    var route: Navigation? = null
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = { route = it },
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )
    channel.send(
      Result.success(
        PersonDetailsResult.CreditsSuccess(
          knownForCredits = PersonCastCreditFactory.knownFor(),
          knownForDepartment = KnownForDepartment.Acting.value,
          movies = GroupedPersonCreditsSample.movies(),
          tvShows = GroupedPersonCreditsSample.tvShows(),
        ),
      ),
    )

    onNodeWithContentDescription(
      getString(UiString.core_ui_movie_image_placeholder),
    ).assertIsDisplayed()

    onNodeWithTag(TestTags.Person.ABOUT_FORM).performScrollToNode(
      matcher = hasTestTag(TestTags.Person.KNOWN_FOR_SECTION),
    )

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertIsDisplayed()

    onAllNodesWithTag(MOVIE_CARD_ITEM_TAG)[0]
      .performTouchInput {
        longClick()
      }

    assertThat(route).isEqualTo(
      Navigation.ActionMenuRoute.Media(theOffice().media.encodeToString()),
    )
  }

  @Test
  fun `test knownForSection is hidden iff credits are not Visible`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
      Result.success(PersonDetailsResult.DetailsSuccess(PersonDetailsFactory.steveCarell())),
    )

    onNodeWithTag(TestTags.Person.ABOUT_FORM).performScrollToIndex(1)

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertDoesNotExist()

    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION).assertIsNotDisplayed()
    onNodeWithTag(TestTags.Person.KNOWN_FOR_SECTION_LIST).assertIsNotDisplayed()
  }

  @Test
  fun `test knownForSection is hidden iff credits are empty`() = uiTest {
    val channel = Channel<Result<PersonDetailsResult>>()

    fetchPersonDetailsUseCase.mockSuccess(
      response = channel,
    )

    val viewModel = PersonViewModel(
      fetchPersonDetailsUseCase = fetchPersonDetailsUseCase.mock,
      fetchChangesUseCase = fetchChangesUseCase.mock,
      markAsFavoriteUseCase = markAsFavoriteUseCase,
      route = navArgs,
    )

    setVisibilityScopeContent {
      PersonScreen(
        route = navArgs,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }
    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsNotDisplayed()

    channel.send(
